2009-09-03  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Remove bogus asserts that break Debug builds at runtime.

        * WebCoreSupport/DocumentLoaderGtk.cpp:
        (WebKit::DocumentLoader::detachFromFrame):
        (WebKit::DocumentLoader::decreaseLoadCount):

2009-09-02  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Xan Lopez and Gustavo Noronha.

         [Gtk] Implement a WebDataSource for the gtk port
         https://bugs.webkit.org/show_bug.cgi?id=24758

        Add data source API getters to WebKitWebFrame.
        Also add WebKitWebDataSource unit test.

        * tests/testwebdatasource.c: Added.
        * webkit/webkitwebframe.cpp:
        * webkit/webkitwebframe.h:

2009-09-02  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Xan Lopez and Gustavo Noronha.

        [Gtk] Implement a WebDataSource for the gtk port
        https://bugs.webkit.org/show_bug.cgi?id=24758

        Subclass DocumentLoader for Gtk and implement it under the WebKit
        namespace. Add WebKitWebDataSource implementation that closely
        follows the mac implementation of the API.

        * WebCoreSupport/DocumentLoaderGtk.cpp: Added.
        * WebCoreSupport/DocumentLoaderGtk.h: Added.
        * webkit/webkitwebdatasource.cpp: Added.
        * webkit/webkitwebdatasource.h: Added.

2009-09-01  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>

        Reviewed by Xan Lopez.

        Avoid causing unexpected issues with window sizing when sites
        disable scrollbars completely.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::scrollbarsModeDidChange):
        * tests/testwindow.c:
        (test_webkit_window_scrollbar_policy):
        * webkit/webkitwebframe.cpp:
        (webkit_web_frame_class_init):

2009-09-01  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Xan Lopez and Gustavo Noronha.
